# workshop

./: .gitignore  AGENTS.md  Cargo.toml  Makefile.toml  README.md
.github/workflows/: release.yml
crates/workc-application/: Cargo.toml
crates/workc-application/src/: error.rs  lib.rs  ports.rs
crates/workc-application/src/knowledge/: dtos.rs  mod.rs  service.rs
crates/workc-application/src/repo_catalog/: dtos.rs  mod.rs  service.rs
crates/workc-cli/: Cargo.toml
crates/workc-cli/src/: main.rs
crates/workc-cli/src/cli/: context.rs  knowledge.rs  mod.rs  repo.rs  repo_group.rs  shared.rs  skill.rs  task.rs
crates/workc-cli/src/presenters/: json.rs  mod.rs  text.rs
crates/workc-domain/: Cargo.toml
crates/workc-domain/src/: config.rs  editor.rs  errors.rs  lib.rs  shared.rs  workspace.rs
crates/workc-infrastructure/: Cargo.toml
crates/workc-infrastructure/src/: lib.rs
crates/workc-infrastructure/src/editor/: linux.rs  macos.rs  mod.rs  windows.rs
crates/workc-infrastructure/src/fs/: config_repository.rs  file_system.rs  knowledge_repository.rs  memory_fs.rs  mod.rs  paths.rs  real_fs.rs  repo_catalog_repository.rs  skill_registry_repository.rs  task_repository.rs  task_skill_mount_repository.rs  workspace_repository.rs
crates/workc-infrastructure/src/git/: command_git_client.rs  mod.rs
crates/workc-infrastructure/src/runtime/: macos.rs  mod.rs  windows.rs
crates/workc-infrastructure/src/time/: mod.rs  system_clock.rs
docs/: architecture.md  reference.md  roadmap.md
scripts/: init.py  install.py  release.py  smoke_test.py  uninstall.py
(+32 files in other folders)
