[package]
name = "workc-cli"
edition.workspace = true
license.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
camino.workspace = true
clap.workspace = true
serde.workspace = true
serde_json = "1"
time.workspace = true
workc-application = { path = "../workc-application" }
workc-domain = { path = "../workc-domain" }
workc-infrastructure = { path = "../workc-infrastructure" }
