[package]
name = "workc-infrastructure"
edition.workspace = true
license.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
camino.workspace = true
serde.workspace = true
time.workspace = true
toml.workspace = true
workc-application = { path = "../workc-application" }
workc-domain = { path = "../workc-domain" }
